--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,31 @@
 *.sx32fsl
 *.wx64fsl
 *.wx32fsl
+
+
+*.DS_Store
+
+
+## Core latex/pdflatex auxiliary files:
+*.aux
+*.lof
+*.log
+*.lot
+*.fls
+*.out
+*.toc
+*.fmt
+*.fot
+*.cb
+*.cb2
+.*.lb
+
+## Build tool auxiliary files:
+*.fdb_latexmk
+*.synctex
+*.synctex(busy)
+*.synctex.gz
+*.synctex.gz(busy)
+*.pdfsync
+
+
